--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,8 @@ jobs:
 
       - name: Install, lint, build 🔧
         run: |
-          # npm install
-          # npm run lint:js
+          npm install
+          npm run lint:ts
           npm run build
 
       - name: Deploy 🚀
