--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,10 +11,10 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
 
-      - name: Install, lint, build 🔧
+      - name: Install,  build 🔧
         run: |
           npm install
-          npm run lint:ts
+          # npm run lint:ts
           npm run build
 
       - name: Deploy 🚀
