--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,9 +11,9 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
 
-      - name: Install,  build 🔧
+      - name: build 🔧
         run: |
-          npm install
+          # npm install
           # npm run lint:ts
           npm run build
 
