--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
-    "react-select": "^5.1.0",
+    "react-select": "^5.7.0",
     "styled-components": "^5.3.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,6 +44,7 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
+    "gh-pages": "^4.0.0",
     "typescript": "^4.8.3"
   }
 }
