--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "target": "es5",
     "allowJs": true,
@@ -20,5 +16,7 @@
     "skipLibCheck": true,
     "strict": true,
     "baseUrl": "./src"
-  }
+  },
+  "exclude": ["node_modules"],
+  "include": ["src"]
 }
