--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
-    "target": "es5",
+    "target": "ES2021",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
