--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "countries-flags",
+  "name": "countries-finder",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://kyzym.github.io/country-finder/",
